<resources>
    <string name="app_name">ThunderPlane</string>
    <string name="game_over">遊戲結束</string>
    <string name="restart">重新開始</string>
    <string name="close">結束遊戲</string>
    <string name="up">UP</string>
    <string name="final_score">"最終分數 : "</string>
    <string name="press_anywhere">點擊任意處開始</string>
    <string name="play_game">開始遊戲</string>
    <string name="setting">設定</string>
    <string name="close_game">結束遊戲</string>
    <string name="first_level">天鵝座</string>
    <string name="second_level">天鷹座</string>
    <string name="third_level">狐狸座</string>
    <string name="fourth_level">天箭座</string>
    <string name="fifth_level">蛇夫座</string>
    <string name="sixth_level">盾牌座</string>
    <string name="seventh_level">人馬座</string>
    <string name="eighth_level">天蠍座</string>
    <string name="night_level">天壇座</string>
    <string name="ten_level">矩尺座</string>

</resources>