<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launcher_icon"
    tools:context=".LauncherActivity">

    <ImageView
        android:id="@+id/iv_press"
        android:src="@drawable/press_anywhere"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="140dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_view"
        android:animateLayoutChanges="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/launch_menu_bg_shape"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="200dp">


        <TextView
            android:id="@+id/play_game"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/play_game"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/setting"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/setting"
            app:layout_constraintTop_toBottomOf="@id/play_game"
            app:layout_constraintBottom_toTopOf="@id/close"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/close"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/close_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setting"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>