<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/game_over_dialog_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <TextView
        android:id="@+id/game_over_title"
        android:text="@string/game_over"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/game_over_score"
        tools:text="最終分數為:20000"
        app:layout_constraintTop_toBottomOf="@id/game_over_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_over_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/game_over_restart"
        app:layout_constraintTop_toBottomOf="@id/game_over_score"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="70dp">

        <ImageView
            android:id="@+id/iv_close"
            android:src="@drawable/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_close"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/tv_close"
            android:text="@string/close"
            app:layout_constraintTop_toTopOf="@id/iv_close"
            app:layout_constraintBottom_toBottomOf="@id/iv_close"
            app:layout_constraintLeft_toRightOf="@id/iv_close"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_over_restart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/game_over_close"
        app:layout_constraintTop_toBottomOf="@id/game_over_score"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="70dp">

        <ImageView
            android:id="@+id/iv_restart"
            android:src="@drawable/restart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintRight_toLeftOf="@id/tv_restart"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/tv_restart"
            android:text="@string/restart"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_restart"
            app:layout_constraintBottom_toBottomOf="@id/iv_restart"
            app:layout_constraintLeft_toRightOf="@id/iv_restart"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    

</androidx.constraintlayout.widget.ConstraintLayout>